syntax = "proto3";

package secret;

option go_package = "github.com/evgenivanovi/gophkeeper/api/pb/secret";

import "common/metadata.proto";

// __________________________________________________

message DecodedSecret {
  int64 id = 1;
  DecodedSecretData data = 2;
  common.Metadata metadata = 3;
}

message EncodedSecret {
  int64 id = 1;
  EncodedSecretData data = 2;
  common.Metadata metadata = 3;
}

message DecodedSecretData {
  string name = 1;
  string type = 2;
  SecretContent content = 3;
}

message EncodedSecretData {
  string name = 1;
  string type = 2;
  bytes content = 3;
}

message SecretContent {
  oneof kind {
    TextSecretContent text = 1;
    BinarySecretContent binary = 2;
    CredentialsSecretContent credentials = 3;
    CardSecretContent card = 4;
  }
}

message TextSecretContent {
  string text = 1;
}

message BinarySecretContent {
  bytes bytes = 1;
}

message CredentialsSecretContent {
  string username = 1;
  string password = 2;
}

message CardSecretContent {
  string num = 1;
  string cvv = 2;
  string due = 3;
}

// __________________________________________________